bug: fixed the overflow-x problems

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ body {
   position: relative;
   gap: 5vh;
   line-height: 1.5;
+  overflow-x: hidden;
 }
 
 body.dark-theme {
@@ -93,7 +94,7 @@ body.dark-theme {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 110vw;
   height: 35rem;
   background-color: var(--accent_color);
   transform-origin: 0;
